# coremark

./: .gitignore  Makefile  bench.sh  isobox.sh  lfi.sh  meson.build  native.sh  wamr.sh  wasm2c.sh  wasmtime.sh
posix/: core_portme.mak
